--- a/gs-service-registration-and-discovery/servicea/src/main/resources/application.properties
+++ b/gs-service-registration-and-discovery/servicea/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=servicea
 
 server.port=8081
+
+# discovery server
+eureka.client.service-url.defaultZone=http://13.232.203.54:8761/eureka/
